--- a/Rabitebankcopy/css/emanetler.css
+++ b/Rabitebankcopy/css/emanetler.css
@@ -89,6 +89,7 @@
 .topmenu li a:hover {
     color: #90b561;
 }
+/*Main-Banner*/
 main{
     width: 100%;
     height: 280px;
@@ -118,17 +119,255 @@ main{
     font-stretch: normal;
     line-height: 1.6;
     letter-spacing: normal;
-   
     max-width: 524px;
 }
-
-.main-box{
+/* Content*/
+.content{
     width: 70%;
-    margin-right: 0;
-    padding: 30px;
-    border-radius: 2px;
-    background-color: #f8fafb   ;
- margin: 20px auto;
+    margin: 50px auto;
+    background-color: #f8fafb;
+    
+   
+    
+}
+.content-img img{
+    border-radius: 15px;
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+    padding: 15px;
+
+}
+.content-img {
+    display: flex;
+    border-radius: 15px;
+}
+.content-head {
+ margin-left: 50px;
+ margin-top: 40px;
+ width: 100%;
+ 
+}
+.content-head h3{
+    font-size: 20px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: -0.5px;
+    color: #2e384d;
+}
+
+.content-center{
+    width: 100%;
+  
+    display: flex;
+    margin-top: 25px;
+
+}
+.content-center .content-center-1 p{
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #708390;
+}
+.content-center-1 strong{
+    font-size: 20px;
+}
+.content-center-1{
+    padding-right: 85px;
+  
+}
+.content-center-2 p{
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #708390;
+}
+.content-center-2 strong{
+    margin-top: 15px;
+    font-size: 20px; 
+    
+}
+.border{
+    border-bottom: 1px solid #e6ebed;
+    padding-bottom: 20px;
+    margin-bottom: 20px
+}
+.btn{
+    margin-top: 40px;
+}
+.btn a{
+   
+    border-radius: 6px;
+    border: solid 1px #e6ebed;
+    padding: 15px 52px;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: 0.3px;
+    text-align: center;
+    color: #708390;
+    transition: all 0.5s;
+}
+.btn a:hover{
+    color: #ffffff;
+    border-color: #c4ccd1;
+    background-color: #c4ccd1;
 }
 
 
+.main-mobile {
+    width: 70%;
+    background-color: #f8fafb;
+    display: flex;
+    margin: 40px auto;
+    padding-left: 15px;
+    align-items: center;
+
+}
+
+.main-mobile h4 {
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.2;
+    letter-spacing: normal;
+    color: #2e384d;
+}
+
+.main-mobile p {
+    opacity: 0.6;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: normal;
+    color: #15334a;
+    margin-top: 12px;
+    width: 90%;
+}
+
+
+/* Footer*/
+footer {
+    padding: 50px;
+    background-color: #f8fafb;
+    margin-top: 50px;
+}
+
+.footer-top {
+    width: 70%;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #e6ebed;
+}
+
+.footer-icon img {
+    width: 76px;
+    height: 36px;
+
+}
+
+.footer-center {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.footer_menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_menu li {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
+
+.footer-text1 {
+    margin-top: 33px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer_menu li h3,
+.footer_menu li h3 a {
+    opacity: 0.6;
+    font-size: 16px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+    color: #15334a;
+}
+
+.footer_menu li>a,
+.footer_menu li p {
+    opacity: 0.6;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.14;
+    letter-spacing: normal;
+    color: #15334a;
+    max-width: 176px;
+}
+
+.footer_menu li>a {
+    color: black;
+}
+.footer-bottom{
+    display: flex;
+    justify-content: flex-end;
+    width: 70%;
+    margin: 0 auto;
+    border-bottom: 1px solid #e6ebed;
+    padding-bottom: 15px;
+}
+.footer-bottom-right i{
+font-size: 50px;
+margin-left: 25px;
+color: gray;
+
+}
+.footer-bottom-right i:hover{
+    color: black;
+    }
+    .footer-bottom-end{
+        margin-top: 50px;
+display: flex;
+justify-content: space-around;
+    }
+    .end-left p{
+        opacity: 0.4;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.63;
+        letter-spacing: normal;
+        color: #15334a  
+    }
+    .end-right  i{
+      font-size: 30px;
+      width: 70px;
+      color: #708390;
+    }
+    .end-right a :hover{
+        color: black;
+    }
