--- a/Rabitebankcopy/css/kampanyalar.css
+++ b/Rabitebankcopy/css/kampanyalar.css
@@ -109,7 +109,13 @@ header{
     height: 300px;
     background-image: linear-gradient(275deg, #6ebb20, #129450);
 }
-.banner-text h1{
+.banner-text{
+    width: 60%;
+    height: 200px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+.banner-text .p1{
     font-size: 36px;
     font-weight: 500;
     font-style: normal;
@@ -117,4 +123,242 @@ header{
     line-height: 1;
     letter-spacing: normal;
     color: white;
+
 }
+.banner-text .p2{
+    font-family: 'SFProText-Light';
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.6;
+    letter-spacing: normal;
+    color: white;
+    max-width: 524px;
+}
+main{
+    width: 80%;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-between;  
+    flex-wrap: wrap;
+   
+}
+.content{
+    width: 45%;
+    height: 400px;
+    border-radius: 2px;
+    background-color: #f8fafb;
+    overflow: hidden;
+    padding: 30px; 
+    margin-bottom: 50px;
+}
+.content-p1 {
+    font-size: 10px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.6;
+    letter-spacing: 0.67px;
+    color: #708390;
+    margin-bottom: 40px;
+}
+.content-p2{
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.4px;
+    color: #2e384d;
+ 
+}
+.main-img{
+    display: flex;
+    justify-content: flex-end;
+}
+.main-img img{
+    width: 244px;
+    height: 160px;
+    object-fit: contain;
+
+}
+.main-a{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: absolute;
+}
+.main-a .read-more{
+    border-radius: 6px;
+    box-shadow: 0 4px 16px 0 rgba(191, 197, 210, 0.5);
+    background-color: #c4ccd1;
+    font-size: 16px;
+    text-align: center;
+    color: #ffffff;
+    padding: 14px 52px;
+    transition: all 0.5s;
+    visibility: visible;
+opacity: 0;
+}
+.content:hover .read-more {
+    opacity: 1;
+   
+}
+.read-more:hover{
+    background-color: #15334a
+}
+.main-mobile {
+    width: 70%;
+    background-color: #f8fafb;
+    display: flex;
+    margin: 40px auto;
+    padding-left: 15px;
+    align-items: center;
+
+}
+
+.main-mobile h4 {
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.2;
+    letter-spacing: normal;
+    color: #2e384d;
+}
+
+.main-mobile p {
+    opacity: 0.6;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: normal;
+    color: #15334a;
+    margin-top: 12px;
+    width: 90%;
+}
+
+
+
+
+footer {
+    padding: 50px;
+    background-color: #f8fafb;
+    margin-top: 50px;
+}
+
+.footer-top {
+    width: 70%;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #e6ebed;
+}
+
+.footer-icon img {
+    width: 76px;
+    height: 36px;
+
+}
+
+.footer-center {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.footer_menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_menu li {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
+
+.footer-text1 {
+    margin-top: 33px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer_menu li h3,
+.footer_menu li h3 a {
+    opacity: 0.6;
+    font-size: 16px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+    color: #15334a;
+}
+
+.footer_menu li>a,
+.footer_menu li p {
+    opacity: 0.6;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.14;
+    letter-spacing: normal;
+    color: #15334a;
+    max-width: 176px;
+}
+
+.footer_menu li>a {
+    color: black;
+}
+.footer-bottom{
+    display: flex;
+    justify-content: flex-end;
+    width: 70%;
+    margin: 0 auto;
+    border-bottom: 1px solid #e6ebed;
+    padding-bottom: 15px;
+}
+.footer-bottom-right i{
+font-size: 50px;
+margin-left: 25px;
+color: gray;
+
+}
+.footer-bottom-right i:hover{
+    color: black;
+    }
+    .footer-bottom-end{
+        margin-top: 50px;
+display: flex;
+justify-content: space-around;
+    }
+    .end-left p{
+        opacity: 0.4;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.63;
+        letter-spacing: normal;
+        color: #15334a  
+    }
+    .end-right  i{
+      font-size: 30px;
+      width: 70px;
+      color: #708390;
+    }
+    .end-right a :hover{
+        color: black;
+    }
+
+
+
