--- a/Rabitebankcopy/css/pul.css
+++ b/Rabitebankcopy/css/pul.css
@@ -152,6 +152,203 @@ margin-top:120px ;
 }
 
 .content-bottom{ 
-  
-  
+    position: relative;
+
+    top: -40px;
+    left: -40px;
+  width: 505px;
+  height: 100px;
+  background-color: #f8fafb;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
+.content-bottom a{
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+}
+.content-bottom .read-more{
+    margin-top: 17px;
+    margin-left: 50px;
+    border-radius: 6px;
+    border: solid 1px #e6ebed;
+    padding: 15px 52px;
+    font-size: 16px;
+    font-weight: 600;
+  
+    letter-spacing: 0.3px;
+    text-align: center;
+    color: #708390
+}
+.read-more:hover{
+    color: #ffffff;
+    border-color: #c4ccd1;
+    background-color: #c4ccd1;
+}
+
+.map{
+    margin-top: 120px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 120px;
+}
+.map iframe{
+    width: 100%;
+    height: 300px;
+}
+
+
+
+.main-mobile {
+    width: 70%;
+    background-color: #f8fafb;
+    display: flex;
+    margin: 90px auto;
+    padding-left: 15px;
+    align-items: center;
+   
+
+}
+
+.main-mobile h4 {
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.2;
+    letter-spacing: normal;
+    color: #2e384d;
+}
+
+.main-mobile p {
+    opacity: 0.6;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: normal;
+    color: #15334a;
+    margin-top: 12px;
+    width: 90%;
+}
+
+
+
+
+
+footer {
+    padding: 50px;
+    background-color: #f8fafb;
+    margin-top: 50px;
+    color: #15334a;
+}
+
+.footer-top {
+    width: 70%;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    color: #15334a;
+    justify-content: space-between;
+    border-bottom: 1px solid #e6ebed;
+}
+
+.footer-icon img {
+    width: 76px;
+    height: 36px;
+
+}
+
+.footer-center {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.footer_menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_menu li {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
+
+.footer-text1 {
+    margin-top: 33px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer_menu li h3,
+.footer_menu li h3 a {
+    opacity: 0.6;
+    font-size: 16px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+    color: #15334a;
+}
+
+.footer_menu li>a,
+.footer_menu li p {
+    opacity: 0.6;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.14;
+    letter-spacing: normal;
+    color: #15334a;
+    max-width: 176px;
+}
+.footer_menu li:hover{
+    color: black;
+}
+.footer_menu li>a {
+    color: black;
+}
+.footer-bottom{
+    display: flex;
+    justify-content: flex-end;
+    width: 70%;
+    margin: 0 auto;
+    border-bottom: 1px solid #e6ebed;
+    padding-bottom: 15px;
+}
+.footer-bottom-right i{
+font-size: 50px;
+margin-left: 25px;
+color: gray;
+
+}
+.footer-bottom-right i:hover{
+    color: black;
+    }
+    .footer-bottom-end{
+        margin-top: 50px;
+display: flex;
+justify-content: space-around;
+    }
+    .end-left p{
+        opacity: 0.4;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.63;
+        letter-spacing: normal;
+        color: #15334a  
+    }
+    .end-right  i{
+      font-size: 30px;
+      width: 70px;
+      color: #708390;
+    }
+    .end-right a :hover{
+        color: black;
+    }
