--- a/Rabitebankcopy/css/style.css
+++ b/Rabitebankcopy/css/style.css
@@ -411,6 +411,7 @@ margin: 0 auto;
     width: 80%;
     background-color: #f8fafb;
     margin: 50px auto;
+    padding: 45px;
 }
 .kredit-text .p3{
     font-size: 24px;
@@ -443,10 +444,11 @@ margin: 0 auto;
     justify-content: center;
     
 }
-.kredit-muddet input{
-    width: 27.2727%;
-    border: 0;
-    background-color: #6ebb20 !important
+.kredit-muddet input[type=range]{
+    color: red;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
 }
 
 
@@ -543,4 +545,27 @@ color: gray;
 }
 .footer-bottom-right i:hover{
     color: black;
+    }
+    .footer-bottom-end{
+        margin-top: 50px;
+display: flex;
+justify-content: space-around;
+    }
+    .end-left p{
+        opacity: 0.4;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.63;
+        letter-spacing: normal;
+        color: #15334a  
+    }
+    .end-right  i{
+      font-size: 30px;
+      width: 70px;
+      color: #708390;
+    }
+    .end-right a :hover{
+        color: black;
     }
