--- a/Rabitebankcopy/css/style.css
+++ b/Rabitebankcopy/css/style.css
@@ -7,9 +7,13 @@
 }
 
 * {
-    font-family: "SFProText-Regular";
-
+    font-family: 'SFProText-Regular';
+  
 }
+
+/*Font*/
+
+
 
 #header {
     border-bottom: 1px solid #e6ebed;
@@ -53,6 +57,7 @@
     font-size: 16px;
     color: #15334a;
     margin-left: 15px;
+    font-weight: 600;
 }
 
 .serchbox {
