--- a/Rabitebankcopy/css/kampanyalar.css
+++ b/Rabitebankcopy/css/kampanyalar.css
@@ -10,6 +10,35 @@
     font-family: "SFProText-Regular";
 
 }
+/*Message*/
+button{
+    background-color: transparent;
+    cursor: pointer;
+}
+.btn{
+position: fixed;
+right: 45px;
+bottom: 45px;
+width: 60px;
+height: 60px;
+background-color: #6ebb20;
+z-index: 100;
+border-radius: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 0.5s;
+border-color: transparent;
+
+}
+
+.btn:hover,
+.btn.active{
+background-color: #15334a;
+cursor: pointer;
+}
+
+/**/
 header{
     position: sticky;
     top: 0;
