--- a/Rabitebankcopy/css/karmane.css
+++ b/Rabitebankcopy/css/karmane.css
@@ -3,16 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-   
+
 }
-*{
-    font-family: SFProText-Regular;
+
+* {
+    font-family: "SFProText-Regular";
+
 }
 /*Message*/
 button{
     background-color: transparent;
+    cursor: pointer;
 }
-.btn-message{
+.btn{
 position: fixed;
 right: 45px;
 bottom: 45px;
@@ -26,22 +29,38 @@ align-items: center;
 justify-content: center;
 transition: background-color 0.5s;
 border-color: transparent;
+
+}
+
+.btn:hover,
+.btn.active{
+background-color: #15334a;
 cursor: pointer;
 }
 
-.btn-message:hover,
-.btn-message.active{
-background-color: #15334a;
-}
-
 /**/
+
+header{
+    position: sticky;
+    top: 0;
+    background-color: white;
+    
+    z-index: 55555;
+}
+.container2{
+    position: sticky;
+    top: 0;
+}
 #header {
     border-bottom: 1px solid #e6ebed;
+   
 }
-.header-left{
+
+.header-left {
     display: flex;
     align-items: center;
 }
+
 #header .container {
     width: 1170px;
     margin: 0 auto;
@@ -58,16 +77,16 @@ background-color: #15334a;
 
 .logotext #Text-a {
     font-size: 18px;
-   
-   
+
+
     color: #2e384d;
 }
 
 .logotext #Text-2 {
 
     font-size: 18px;
-    
-  
+
+
     color: #adb6bf;
 }
 
@@ -88,11 +107,13 @@ background-color: #15334a;
     width: 51px;
     height: 24px;
     margin-left: 15px;
+    position: relative;
+    top: 4px;
 }
 
-.menu{
-    width:1170px;
-    margin:0 auto;
+.menu {
+    width: 1170px;
+    margin: 0 auto;
 }
 
 .topmenu {
@@ -115,125 +136,110 @@ background-color: #15334a;
 .topmenu li a:hover {
     color: #90b561;
 }
-/*Main-Banner*/
-main{
+.container2{
+    z-index: 4444;
+}
+/*Banner*/
+.banner{
     width: 100%;
-    height: 280px;
-    background-image: linear-gradient(275deg, #6ebb20, #129450)
+    height: 350px;
+    display: flex;   
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    background-image: linear-gradient(275deg, #6ebb20, #129450);
 }
-.page-banner{
-    display: flex;
-    margin: 0 auto;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-.page-banner img{
+
+.img img{
+    
     width: 300px;
     height: 266px;
-   
+    object-fit: contain;
 }
-.banner-text{
-    margin-top: 50px;
-    color: #fff;
+.banner-left{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center
 }
-.banner-text p{
-    font-family: 'SFProText-Light';
-    margin-top: 15px;
-    font-size: 20px;
+.text h1{
+    font-size: 36px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: white;
+    margin-bottom: 50px;
+    margin-left: 50px;
+}
+
+.text ul>li{
+    list-style-type: none;
+}
+.text ul>li>p{
+    font-size: 16px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.6;
+    line-height: 1.5;
     letter-spacing: normal;
-    max-width: 524px;
+    color: #ffffff !important;
+    opacity: 0.5;
 }
-/* Content*/
-.content{
-    width: 70%;
-    margin: 50px auto;
-    background-color: #f8fafb;
-    
-   
-    
-}
-.content-img img{
-    border-radius: 15px;
-    width: 500px;
-    height: 300px;
-    object-fit: cover;
-    padding: 15px;
-
-}
-.content-img {
-    display: flex;
-    border-radius: 15px;
-}
-.content-head {
- margin-left: 50px;
- margin-top: 40px;
- width: 100%;
- 
-}
-.content-head h3{
-    font-size: 20px;
-    font-weight: 600;
+.text ul>li>strong{
+    margin-top: 5px;
+    font-size: 25.2px;
+    font-weight: bold;
     font-style: normal;
     font-stretch: normal;
-    line-height: normal;
-    letter-spacing: -0.5px;
-    color: #2e384d;
+    line-height: 1.27;
+    letter-spacing: normal;
+    color: white;
+}
+.list{
+    display: flex;
+ 
+   
+}
+.list li{
+    margin-left: 50px;
 }
 
-.content-center{
+
+/*Main*/
+main{
+    width: 100%;
+    height: 100%;
+}
+.content-top{
+width: 70%;
+height: 400px;
+display: flex;
+margin: 50px auto;
+
+}
+
+.list-2{
     width: 100%;
   
+    border-radius: 2px;
+    border: solid 1px #eaecee;
+    background-color: #f8fafb;
+    height: 150px;
     display: flex;
-    margin-top: 25px;
-
+    align-items: center;
 }
-.content-center .content-center-1 p{
-    font-size: 16px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: #708390;
-}
-.content-center-1 strong{
-    font-size: 20px;
-}
-.content-center-1{
-    padding-right: 85px;
-  
-}
-.content-center-2 p{
-    font-size: 16px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: #708390;
-}
-.content-center-2 strong{
-    margin-top: 15px;
-    font-size: 20px; 
-    
-}
-.border{
-    border-bottom: 1px solid #e6ebed;
-    padding-bottom: 20px;
-    margin-bottom: 20px
-}
-.btn{
-    margin-top: 40px;
-}
-.btn a{
-   
-    border-radius: 6px;
-    border: solid 1px #e6ebed;
-    padding: 15px 52px;
+.list-2 li> span
+{
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    box-shadow: 0 4px 16px 0 rgba(191, 197, 210, 0.5);
+    background-color: #5e687d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 16px;
     font-weight: 600;
     font-style: normal;
@@ -241,51 +247,47 @@ main{
     line-height: normal;
     letter-spacing: 0.3px;
     text-align: center;
-    color: #708390;
-    transition: all 0.5s;
-}
-.btn a:hover{
     color: #ffffff;
-    border-color: #c4ccd1;
-    background-color: #c4ccd1;
+    margin-right: 24px;
 }
-
-
-.main-mobile {
-    width: 70%;
-    background-color: #f8fafb;
-    display: flex;
-    margin: 40px auto;
-    padding-left: 15px;
-    align-items: center;
-
-}
-
-.main-mobile h4 {
-    font-size: 40px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    color: #2e384d;
-}
-
-.main-mobile p {
-    opacity: 0.6;
-    font-size: 20px;
+.list-2 p{
+    font-size: 16px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.75;
+    line-height: 1.5;
     letter-spacing: normal;
-    color: #15334a;
-    margin-top: 12px;
-    width: 90%;
+    color: #708390;
+}
+.list-2 strong{
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    color: #2e384d;
+    font-family: 'SFProText-Bold';
+}
+.list-2 li {
+
+display: flex;
+align-items: center;
+    width: 100%;
+    padding-left: 100px;
+}
+.content-top >ul>li{
+    height: 100%;
+    border-right: 1px solid #eaecee;
 }
 
 
-/* Footer*/
+
+
+
+
+/*Footer*/
+
 footer {
     padding: 50px;
     background-color: #f8fafb;
