--- a/Rabitebankcopy/css/kreditler.css
+++ b/Rabitebankcopy/css/kreditler.css
@@ -9,18 +9,35 @@
     font-family: SFProText-Regular;
 }
 
-/*Font*/
-@font-face{
-    font-family: 'SFProText-Regular';
-    src: url(/font/FontsFree-Net-SFProText-Regular.ttf);
+/*Message*/
+button{
+    background-color: transparent;
+    cursor: pointer;
+}
+.btn-message{
+position: fixed;
+right: 45px;
+bottom: 45px;
+width: 60px;
+height: 60px;
+background-color: #6ebb20;
+z-index: 100;
+border-radius: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 0.5s;
+border-color: transparent;
 
 }
-@font-face{
-    font-family: 'SFProText-Semibold';
-    src: url(/font/FontsFree-Net-SFProText-Semibold\ \(1\).ttf);
+
+.btn-message:hover,
+.btn-message.active{
+background-color: #15334a;
+cursor: pointer;
 }
 
-
+/**/
 
 
 #header {
