--- a/Rabitebankcopy/css/style.css
+++ b/Rabitebankcopy/css/style.css
@@ -7,9 +7,35 @@
 }
 
 * {
-    font-family: 'SFProText-Regular';
+    font-family: 'SFProText-HeavyItalic';
+    
   
 }
+/*Message*/
+button{
+    background-color: transparent;
+}
+.btn{
+position: fixed;
+right: 45px;
+bottom: 45px;
+width: 60px;
+height: 60px;
+background-color: #6ebb20;
+z-index: 100;
+border-radius: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 0.5s;
+border-color: transparent;
+}
+
+.btn:hover,
+.btn.active{
+background-color: #15334a;
+}
+
 
 /*Font*/
 
@@ -38,10 +64,13 @@
     margin-left: 25px;
 }
 
+
+
 .logotext #Text-a {
     font-size: 18px;
-
-
+    font-family: 'SFProText-SemiboldItalic';
+    font-weight: 600;
+    font-style: italic;
     color: #2e384d;
 }
 
